GithubPages and delete data button implementation

--- a/TFG/src/app/planificadores/planificadores-list/planificadores-list.component.css
+++ b/TFG/src/app/planificadores/planificadores-list/planificadores-list.component.css
@@ -31,6 +31,9 @@ button.btn-behaviour{
 button.btn-centrado{
     margin-left: 35%;
 }
+button.btn-eliminar{
+  margin-left: 43%
+}
 
 p.textoError {
     color: red;
