schedulers info and cleaning code

--- a/TFG/src/app/navigation/navigation.component.html
+++ b/TFG/src/app/navigation/navigation.component.html
@@ -13,18 +13,13 @@
       <a mat-list-item routerLink='/base'>
         <mat-icon>home</mat-icon>Inicio
       </a>
-      <!--<a mat-list-item routerLink='/planificadores'>
-        <mat-icon>dns</mat-icon>Planificadores
-      </a>-->
-
-
       <mat-expansion-panel [class.mat-elevation-z0]="true" dense>
         <mat-expansion-panel-header>
-          <mat-icon>scatter_plot</mat-icon>Planificadores <!-- dns-->
+          <mat-icon>scatter_plot</mat-icon>Planificadores
         </mat-expansion-panel-header>
         <mat-nav-list dense>
           <a mat-list-item routerLink="/planificadores">
-            <mat-icon>poll</mat-icon>Simulador <!-- show_chart-->
+            <mat-icon>poll</mat-icon>Simulador 
           </a>
           <a mat-list-item routerLink="/ejemplo">
             <mat-icon>image_aspect_ratio</mat-icon>Ejemplos
