--- a/TFG/src/app/ejemplo-list/ejemplo-list.component.css
+++ b/TFG/src/app/ejemplo-list/ejemplo-list.component.css
@@ -94,6 +94,14 @@
   background-color:yellow;
 }
 
+.black {
+  background-color:black;
+}
+
+.blue {
+  background-color:blue;
+}
+
 .label-cell {
   padding-left: 10px;
 }
