--- a/TFG/src/app/planificadores/planificadores-list/planificadores-list.component.html
+++ b/TFG/src/app/planificadores/planificadores-list/planificadores-list.component.html
@@ -213,7 +213,7 @@
         <ng-container *ngFor="let header of headersTabla; let i = index" [matColumnDef]="header">
             <th mat-header-cell *matHeaderCellDef>{{ header }}</th>
             <td mat-cell *matCellDef="let element"
-                [ngStyle]="{ color: (element[i] === 'Running') ? 'green' : (element[i] === 'Ready') ? 'yellow' : (element[i] === 'Terminated') ? 'red' : 'white' }">
+                [ngStyle]="{ color: (element[i] === 'Running') ?'green' : (element[i] === 'Ready') ? 'yellow' :  (element[i] === 'Terminated') ? 'red' : (element[i] === 'Waiting') ? 'blue' : (element[i] === 'Inactive') ? 'black' : 'white' }">
                 {{ element[i] }}</td>
         </ng-container>
 
