--- a/TFG/src/app/ejemplo-list/ejemplo-list.component.html
+++ b/TFG/src/app/ejemplo-list/ejemplo-list.component.html
@@ -157,7 +157,7 @@
     <mat-divider></mat-divider>
     <br>
     <div class="chips-div">
-        <mat-chip-listbox aria-label="Scheduling selection">
+        <mat-chip-listbox (click)="goDown()" aria-label="Scheduling selection">
             <mat-chip-option color="dark" (click)="pulsadoFifo()">FIFO</mat-chip-option>
             <mat-chip-option color="primary" (click)="pulsadoPriorityPreemtive()">Priority: Preemptive</mat-chip-option>
             <mat-chip-option color="accent" (click)="pulsadoPriorityNonPreemptive()">Priority: Non Preemptive
@@ -170,7 +170,7 @@
     <br><br><br><br><br><br>
 
     <!-- LEYENDA DE COLORES-->
-    <table *ngIf="generarTablaFIFO || generarTablaRoundRobin || generarTablaPreemptive || generarTablaNonPreemptive" class="legend">
+    <table id="inicioTabla" *ngIf="generarTabla" class="legend">
         <tr>
             <td class="color-cell red"></td>
             <td class="label-cell">Terminated</td>
@@ -194,22 +194,8 @@
 
     </table>
 
-
-    <table mat-table *ngIf="generarTablaFIFO" [dataSource]="dataSource" class="tabla-planificador">
-
-        <ng-container *ngFor="let header of headersTabla; let i = index" [matColumnDef]="header">
-            <th mat-header-cell *matHeaderCellDef>{{ header }}</th>
-            <td mat-cell *matCellDef="let element"
-                [ngStyle]="{ color: (element[i] === 'Running') ?'green' : (element[i] === 'Ready') ? 'yellow' :  (element[i] === 'Terminated') ? 'red' : (element[i] === 'Waiting') ? 'blue' : (element[i] === 'Inactive') ? 'black' : 'white' }">
-                {{ element[i] }}</td>
-        </ng-container>
-
-        <tr mat-header-row *matHeaderRowDef="headersTabla"></tr>
-        <tr mat-row *matRowDef="let row; columns: headersTabla;"></tr>
-
-    </table>
-
-    <table mat-table *ngIf="generarTablaRoundRobin" [dataSource]="dataSource" class="tabla-planificador">
+    <p *ngIf = "infoQuantum"> El quantum es de </p>
+    <table mat-table *ngIf="generarTabla" [dataSource]="dataSource" class="tabla-planificador">
 
         <ng-container *ngFor="let header of headersTabla; let i = index" [matColumnDef]="header">
             <th mat-header-cell *matHeaderCellDef>{{ header }}</th>
@@ -223,32 +209,5 @@
 
     </table>
 
-    <table mat-table *ngIf="generarTablaPreemptive" [dataSource]="dataSource" class="tabla-planificador">
-
-        <ng-container *ngFor="let header of headersTabla; let i = index" [matColumnDef]="header">
-            <th mat-header-cell *matHeaderCellDef>{{ header }}</th>
-            <td mat-cell *matCellDef="let element"
-                [ngStyle]="{ color: (element[i] === 'Running') ?'green' : (element[i] === 'Ready') ? 'yellow' :  (element[i] === 'Terminated') ? 'red' : (element[i] === 'Waiting') ? 'blue' : (element[i] === 'Inactive') ? 'black' : 'white' }">
-                {{ element[i] }}</td>
-        </ng-container>
-
-        <tr mat-header-row *matHeaderRowDef="headersTabla"></tr>
-        <tr mat-row *matRowDef="let row; columns: headersTabla;"></tr>
-
-    </table>
-
-    <table mat-table *ngIf="generarTablaNonPreemptive" [dataSource]="dataSource" class="tabla-planificador">
-
-        <ng-container *ngFor="let header of headersTabla; let i = index" [matColumnDef]="header">
-            <th mat-header-cell *matHeaderCellDef>{{ header }}</th>
-            <td mat-cell *matCellDef="let element"
-                [ngStyle]="{ color: (element[i] === 'Running') ?'green' : (element[i] === 'Ready') ? 'yellow' :  (element[i] === 'Terminated') ? 'red' : (element[i] === 'Waiting') ? 'blue' : (element[i] === 'Inactive') ? 'black' : 'white' }">
-                {{ element[i] }}</td>
-        </ng-container>
-
-        <tr mat-header-row *matHeaderRowDef="headersTabla"></tr>
-        <tr mat-row *matRowDef="let row; columns: headersTabla;"></tr>
-
-    </table>
 
 </div>
