--- a/TFG/src/app/planificadores/planificadores-list/planificadores-list.component.css
+++ b/TFG/src/app/planificadores/planificadores-list/planificadores-list.component.css
@@ -119,6 +119,14 @@ p.textoError {
   background-color:yellow;
 }
 
+.black {
+  background-color:black;
+}
+
+.blue {
+  background-color:blue;
+}
+
 .label-cell {
   padding-left: 10px;
 }
