--- a/TFG/src/app/planificadores/planificadores-list/planificadores-list.component.css
+++ b/TFG/src/app/planificadores/planificadores-list/planificadores-list.component.css
@@ -108,23 +108,23 @@ p.textoError {
 }
 
 .red {
-  background-color: red;
+  background-color: #E74C3C;
 }
 
 .green {
-  background-color: green;
+  background-color: #27AE60;
 }
 
 .yellow {
-  background-color:yellow;
+  background-color:#F1C40F;
 }
 
 .black {
-  background-color:black;
+  background-color:#17202A;
 }
 
-.blue {
-  background-color:blue;
+.pink {
+  background-color:#F5CBA7;
 }
 
 .label-cell {
@@ -148,4 +148,12 @@ p.textoError {
   height: 541px;
   width: 100%; 
   margin-top: 69%;
+}
+
+.time-slice-field-container {
+  display: flex;
+  justify-content: center;
+}
+.time-slice-field {
+  width: 20%
 }
