--- a/TFG/src/app/ejemplo-list/ejemplo-list.component.html
+++ b/TFG/src/app/ejemplo-list/ejemplo-list.component.html
@@ -153,7 +153,7 @@
             </mat-grid-tile-header>
         </mat-grid-tile>
     </mat-grid-list>
-    <br>
+    <br><br><br>
     <mat-divider></mat-divider>
     <br>
     <div class="chips-div">
@@ -167,7 +167,7 @@
     </div>
     <br>
     <mat-divider></mat-divider>
-    <br><br><br><br><br><br>
+    <br><br><br><br>
 
     <!-- LEYENDA DE COLORES-->
     <table id="inicioTabla" *ngIf="generarTabla" class="legend">
@@ -184,7 +184,7 @@
             <td class="label-cell">Ready</td>
         </tr>
         <tr>
-            <td class="color-cell blue"></td>
+            <td class="color-cell pink"></td>
             <td class="label-cell">Waiting</td>
         </tr>
         <tr>
@@ -194,13 +194,13 @@
 
     </table>
 
-    <p *ngIf = "infoQuantum"> El quantum es de </p>
+    <p *ngIf = "infoQuantum"> <strong>Time Slice:</strong> 2</p>
     <table mat-table *ngIf="generarTabla" [dataSource]="dataSource" class="tabla-planificador">
 
         <ng-container *ngFor="let header of headersTabla; let i = index" [matColumnDef]="header">
             <th mat-header-cell *matHeaderCellDef>{{ header }}</th>
             <td mat-cell *matCellDef="let element"
-                [ngStyle]="{ color: (element[i] === 'Running') ?'green' : (element[i] === 'Ready') ? 'yellow' :  (element[i] === 'Terminated') ? 'red' : (element[i] === 'Waiting') ? 'blue' : (element[i] === 'Inactive') ? 'black' : 'white' }">
+                [ngStyle]="{ color: (element[i] === 'Running') ?'#27AE60' : (element[i] === 'Ready') ? '#F1C40F' :  (element[i] === 'Terminated') ? '#E74C3C' : (element[i] === 'Waiting') ? '#F5CBA7' : (element[i] === 'Inactive') ? 'black' : 'white' }">
                 {{ element[i] }}</td>
         </ng-container>
 
