new table added

--- a/TFG/src/app/planificadores/planificadores-list/planificadores-list.component.css
+++ b/TFG/src/app/planificadores/planificadores-list/planificadores-list.component.css
@@ -107,6 +107,10 @@ p.textoError {
   height: 20px;
 }
 
+.vertical-border td {
+  border-right: 1px solid #424242;
+}
+
 .red {
   background-color: #E74C3C;
 }
